--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,22 @@
   preview={brownian-motion.gif}
 }
 
+
+@article{liu2016resolution,
+  abbr={KSII},
+  bibtex_show={true},
+	author = {Liu, Meiqin and Zhao, Yao and Lin, Chunyu and Bai, Huihui and Yao, Chao},
+	journal = {KSII Transactions on Internet and Information Systems (TIIS)},
+	number = {6},
+	pages = {2730--2747},
+	publisher = {Korean Society for Internet Information},
+	title = {Resolution-independent up-sampling for depth map using fractal transforms},
+	volume = {10},
+	year = {2016},
+  slected={true}
+  }
+
+
 @article{einstein1950meaning,
   abbr={AJP},
   bibtex_show={true},
