--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@
 	title = {Resolution-independent up-sampling for depth map using fractal transforms},
 	volume = {10},
 	year = {2016},
-  slected={true}
+  selected={true}
   }
 
 
