--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,6 @@
 	title = {Resolution-independent up-sampling for depth map using fractal transforms},
 	volume = {10},
 	year = {2016},
-  selected={true}
   }
 
 
@@ -40,6 +39,20 @@
   year={1950},
   publisher={American Association of Physics Teachers,}
 }
+
+
+@inproceedings{chen2021end,
+  abbr={PRCV},
+  bibtex_show={true},
+	author = {Chen, Junru and Yao, Chao and Liu, Meiqin and Zhao, Yao},
+	booktitle = {Pattern Recognition and Computer Vision (PRCV)},
+	organization = {Springer},
+	pages = {623--635},
+	pdf = {PRCV2021-An End-to-End Mutual Enhancement Network Toward Image Compression and Semantic Segmentation.pdf},
+	title = {An End-to-End Mutual Enhancement Network Toward Image Compression and Semantic Segmentation},
+	year = {2021}
+}
+
 
 @article{PhysRev.47.777,
   abbr={PhysRev},
