--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,57 +1,16 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+% @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
-}
-
-
-@article{liu2016resolution,
-  abbr={KSII},
-  bibtex_show={true},
-	author = {Liu, Meiqin and Zhao, Yao and Lin, Chunyu and Bai, Huihui and Yao, Chao},
-	journal = {KSII Transactions on Internet and Information Systems (TIIS)},
-	number = {6},
-	pages = {2730--2747},
-	publisher = {Korean Society for Internet Information},
-	title = {Resolution-independent up-sampling for depth map using fractal transforms},
-	volume = {10},
-	year = {2016},
-  }
-
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
-}
-
-
-@inproceedings{chen2021end,
-  abbr={PRCV},
-  bibtex_show={true},
-	author = {Chen, Junru and Yao, Chao and Liu, Meiqin and Zhao, Yao},
-	booktitle = {Pattern Recognition and Computer Vision (PRCV)},
-	organization = {Springer},
-	pages = {623--635},
-	pdf = {PRCV2021-An End-to-End Mutual Enhancement Network Toward Image Compression and Semantic Segmentation.pdf},
-	title = {An End-to-End Mutual Enhancement Network Toward Image Compression and Semantic Segmentation},
-	year = {2021}
-}
+% @book{einstein1956investigations,
+%   bibtex_show={true},
+%   title={Investigations on the Theory of the Brownian Movement},
+%   author={Einstein, Albert},
+%   year={1956},
+%   publisher={Courier Corporation,},
+%   preview={brownian-motion.gif}
+% }
 
 @article{bai2023mspnet,
   abbr={Neurocomputing},
@@ -67,6 +26,64 @@
   pdf={Neuro-MSPNet.pdf},
   selected={true},
 }
+
+@article{liu2023temporal,
+  abbr={IEEETCSVT},
+  bibtex_show={true},
+  title={Temporal Consistency Learning of Inter-Frames for Video Super-Resolution},
+  author={Liu, Meiqin and Jin, Shuo and Yao, Chao and Lin, Chunyu and Zhao, Yao},
+  journal={IEEE Transactions on Circuits and Systems for Video Technology},
+  year={2023},
+  publisher={IEEE},
+
+  pdf={TCSVT-Temporal Consistency Learning of Inter-Frames for Video Super-Resolution.pdf},
+  html={https://zhuanlan.zhihu.com/p/570306385},
+  selected={true},
+}
+
+@inproceedings{chen2021end,
+  abbr={PRCV},
+  bibtex_show={true},
+	author = {Chen, Junru and Yao, Chao and Liu, Meiqin and Zhao, Yao},
+	booktitle = {Pattern Recognition and Computer Vision (PRCV)},
+	organization = {Springer},
+	pages = {623--635},
+	pdf = {PRCV2021-An End-to-End Mutual Enhancement Network Toward Image Compression and Semantic Segmentation.pdf},
+	title = {An End-to-End Mutual Enhancement Network Toward Image Compression and Semantic Segmentation},
+	year = {2021}
+}
+
+@article{liu2016resolution,
+  abbr={KSII},
+  bibtex_show={true},
+	author = {Liu, Meiqin and Zhao, Yao and Lin, Chunyu and Bai, Huihui and Yao, Chao},
+	journal = {KSII Transactions on Internet and Information Systems (TIIS)},
+	number = {6},
+	pages = {2730--2747},
+	publisher = {Korean Society for Internet Information},
+	title = {Resolution-independent up-sampling for depth map using fractal transforms},
+	volume = {10},
+	year = {2016},
+  }
+
+
+% @article{einstein1950meaning,
+%   abbr={AJP},
+%   bibtex_show={true},
+%   title={The meaning of relativity},
+%   author={Einstein, Albert and Taub, AH},
+%   journal={American Journal of Physics,},
+%   volume={18},
+%   number={6},
+%   pages={403--404},
+%   year={1950},
+%   publisher={American Association of Physics Teachers,}
+% }
+
+
+
+
+
 
 @article{PhysRev.47.777,
   abbr={PhysRev},
@@ -111,17 +128,17 @@
   year={1905}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
+% @article{einstein1905electrodynamics,
+%   title={On the electrodynamics of moving bodies},
+%   author={Einstein, A.},
+%   year={1905}
+% }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
-}
+% @book{przibram1967letters,
+%   bibtex_show={true},
+%   title={Letters on wave mechanics},
+%   author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
+%   year={1967},
+%   publisher={Vision},
+%   preview={wave-mechanics.gif}
+% }
