--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -282,7 +282,7 @@
   pages={2015--2022},
   year={2016},
   publisher={IEEE},
-  selected={True},
+  selected={true},
   pdf={TMM-Depth Map Down-Sampling and Coding Based on Synthesized View Distortion.pdf},
 }
 
