--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,7 +22,7 @@
   pages={71--80},
   year={2023},
   publisher={Elsevier},
-
+  code={https://github.com/baiyu12345/LGDeNet},
   pdf={Neuro-MSPNet.pdf},
 }
 
