--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
   year            = {2023},
   publisher = {IEEE},
 
-  html={https://arxiv.org/abs/2303.09112}
+  arxiv={https://arxiv.org/abs/2303.09112}
 }
 
 @article{bai2023mspnet,
@@ -22,7 +22,6 @@
   pages={71--80},
   year={2023},
   publisher={Elsevier},
-  code={https://github.com/baiyu12345/LGDeNet},
   pdf={Neuro-MSPNet.pdf},
 }
 
