--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
   year            = {2023},
   publisher = {IEEE},
 
-  arxiv={https://arxiv.org/abs/2303.09112}
+  arxiv={2303.09112}
 }
 
 @article{bai2023mspnet,
