--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
   title           = {SigVIC: Spatial Importance Guided Variable-Rate Image Compression},
   year            = {2023},
   publisher = {IEEE},
-
+  preview = {ICASSP.png},
   arxiv={2303.09112}
 }
 
