--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,21 @@
   title           = {SigVIC: Spatial Importance Guided Variable-Rate Image Compression},
   year            = {2023},
   publisher = {IEEE},
+  slides = {}
   arxiv={2303.09112}
+}
+
+@article{han2023Hand,
+abbr={CAVW},
+bibtex_show={true},
+author = {Han, Bing and Yao, Chao and Wang, Xiaokun and Chang, Jian and Ban, Xiaojuan},
+title = {HandDGCL: Two-hand 3D reconstruction based disturbing graph contrastive learning},
+journal = {Computer Animation and Virtual Worlds},
+volume = {34},
+number = {3-4},
+pages = {e2186},
+pdf={Computer Animation   Virtual - 2023 - Han - HandDGCL  Two‐hand 3D reconstruction based disturbing graph contrastive.pdf},
+year = {2023}
 }
 
 @article{bai2023mspnet,
