--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,14 +15,13 @@
 @article{han2023Hand,
   abbr={CAVW},
   bibtex_show={true},
-  author = {Han, Bing and Yao, Chao and Wang, Xiaokun and Chang, Jian and Ban, Xiaojuan},
-  title = {HandDGCL: Two-hand 3D reconstruction based disturbing graph contrastive learning},
-  journal = {Computer Animation and Virtual Worlds},
-  volume = {34},
-  number = {3-4},
-  pages = {e2186},
+  title={HandDGCL: Two-hand 3D reconstruction based disturbing graph contrastive learning},
+  author={Han, Bing and Yao, Chao and Wang, Xiaokun and Chang, Jian and Ban, Xiaojuan},
+  journal={Computer Animation and Virtual Worlds},
+  volume={34},
+  pages={3-4},
+  year={2023},
   pdf={CAVW-Two-hand 3D reconstruction based disturbing graph contrastive learning.pdf},
-  year = {2023}
 }
 
 @article{bai2023mspnet,
