--- a/_bibliography/papers0.bib
+++ b/_bibliography/papers0.bib
@@ -1,14 +1,14 @@
 ---
----暂未添加无pdf的
----zxc
-@inproceedings{
-  abbr = {CAVW},
+---
+@inproceedings{liang2023Icassp,
+  abbr = {ICASSP},
   bibtex_show={true},
-  author          = {Wang, Xiaokun and Wang, Tiancheng and Wang, Jiamin and Xu, Yanrui and Ban, Xiaojuan and Huang Houbin and Zhu Zhihong  and Chang, Jian  and Zhang, Jianjun},
-  booktitle       = {Computer Animation and Virtual Worlds},
-  title           = {Implicit smoothed particle hydrodynamics model for simulating incompressible fluid- elastic coupling},
+  author          = {Liang, Jiaming and Liu, Meiqin, and Yao, Chao and Lin, Chunyu and Zhao, Yao},
+  booktitle       = {IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)},
+  title           = {SigVIC: Spatial Importance Guided Variable-Rate Image Compression},
   year            = {2023},
-  pdf={Computer Animation   Virtual - 2023 - Wang - Implicit smoothed particle hydrodynamics model for simulating incompressible.pdf}
+  publisher = {IEEE},
+  arxiv={2303.09112}
 }
 
 @article{han2023Hand,
