--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---暂未添加无pdf的
 ---zxc
-@inproceedings{
+@inproceedings{@wang2023x
   abbr = {CAVW},
   bibtex_show={true},
   author          = {Wang, Xiaokun and Wang, Tiancheng and Wang, Jiamin and Xu, Yanrui and Ban, Xiaojuan and Huang Houbin and Zhu Zhihong  and Chang, Jian  and Zhang, Jianjun},
