try add one pdf

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,13 +1,12 @@
 ---
 ---
-@inproceedings{liang2023Icassp,
-  abbr = {ICASSP},
-  bibtex_show={true},
-  author          = {Liang, Jiaming and Liu, Meiqin, and Yao, Chao and Lin, Chunyu and Zhao, Yao},
-  booktitle       = {IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)},
-  title           = {SigVIC: Spatial Importance Guided Variable-Rate Image Compression},
-  year            = {2023},
-  publisher = {IEEE},
-  arxiv={2303.09112}
+@article{wang2023implicit,
+  title={Implicit smoothed particle hydrodynamics model for simulating incompressible fluid-elastic coupling},
+  author={Wang, Xiaokun and Wang, Tiancheng and Wang, Jiamin and Xu, Yanrui and Ban, Xiaojuan and Huang, Houbin and Zhu, Zhihong and Chang, Jian and Zhang, Jianjun},
+  journal={Computer Animation and Virtual Worlds},
+  year={2023},
+  volume = {e2146},
+  note={SCI},
+  pdf={wang2013implicit.pdf}
 }
 
