--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,5 +8,16 @@
   volume = {e2146},
   note={SCI},
   pdf={wang2013implicit.pdf}
+  selected={true}
 }
 
+@article{xu2023spatial,
+  title={Spatial adaptivity with boundary refinement for smoothed particle hydrodynamics fluid simulation},
+  author={Xu, Yanrui and Song, Chongming and Wang, Xiaokun and Ban, Xiaojuan and Wang, Jiamin and Zhang, Yalan and Chang, Jian},
+  journal={Computer Animation and Virtual Worlds},
+  year={2023},
+  volume = {e2136},
+  note={SCI}
+  pdf={xu2023spatial.pdf}
+  selected={true}
+}
