--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,7 @@
   journal={Computer Animation and Virtual Worlds},
   year={2023},
   volume = {e2136},
-  note={SCI}
-  pdf={xu2023spatial.pdf}
+  note={SCI},
+  pdf={xu2023spatial.pdf},
   selected={true}
 }
