--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   year={2023},
   volume = {e2146},
   note={SCI},
-  pdf={wang2013implicit.pdf}
+  pdf={wang2013implicit.pdf},
   selected={true}
 }
 
