--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,8 @@
 ---
 ---
+--- todo abbr={CAVW},
 @article{wang2023implicit,
+  
   title={Implicit smoothed particle hydrodynamics model for simulating incompressible fluid-elastic coupling},
   author={Wang, Xiaokun and Wang, Tiancheng and Wang, Jiamin and Xu, Yanrui and Ban, Xiaojuan and Huang, Houbin and Zhu, Zhihong and Chang, Jian and Zhang, Jianjun},
   journal={Computer Animation and Virtual Worlds},
@@ -8,7 +10,7 @@
   volume = {e2146},
   note={SCI},
   pdf={wang2013implicit.pdf},
-  selected={true}
+  selected={true},
 }
 
 @article{xu2023spatial,
@@ -19,5 +21,5 @@
   volume = {e2136},
   note={SCI},
   pdf={xu2023spatial.pdf},
-  selected={true}
+  selected={true},
 }
