--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,3 +23,329 @@
   pdf={xu2023spatial.pdf},
   selected={true},
 }
+
+@article{xu2023anisotropic,
+  title={Anisotropic screen space rendering for particle-based fluid simulation},
+  author={Xu, Yanrui and Xu, Yuanmu and Xiong, Yuege and Yin, Dou and Ban, Xiaojuan and Wang, Xiaokun and Chang, Jian and Zhang, Jian Jun},
+  journal={Computers \& Graphics},
+  volume={110},
+  pages={118--124},
+  year={2023},
+  publisher={Elsevier},
+  pdf={xu2023anisotropic.pdf}
+}
+
+@article{xie2022indoor,
+  title={Indoor Visual Re-localization for Long-term Autonomous Robots Based on Object-level Features and Semantic Relationships},
+  author={Xie, Yuanyan and Guo, Yu and Mi, Zhenqiang and Wang, Xiaokun and Yang, Yang and Obaidat, Mohammad S},
+  journal={IEEE Robotics and Automation Letters},
+  year={2022},
+  publisher={IEEE}
+  pdf={xie2022indoor.pdf}
+}
+
+@article{xu2022volume,
+  title={Volume Flux free SPH Approach for Multiphase Fluids},
+  author={Xu, Yanrui and Wang, Xiaokun and Ban, Xiaojuan and Wang, Jiamin and Song, Chongming and Wang, Yong},
+  journal={Journal of Computer-Aided Design \& Computer Graphics},
+  year={2022},
+  volume = {34},
+  number = {11},
+  pages = {1637-1646},
+  note = {EI, CCF CAD/CG 2021+2022 Conference Best paper award}
+  pdf={xu2022volume.pdf}
+}
+
+@inproceedings{liu2023fluidplaying,
+  title={FluidPlaying: Efficient Adaptive Simulation for Highly Dynamic Fluid},
+  author={Liu, Sinuo and Ban, Xiaojuan and Li, Sheng and Zeng, Haokai and Wang, Xiaokun and Xu, Yanrui and Zhu, Fei and Wang, Guoping},
+  booktitle={2023 IEEE Conference on Virtual Reality and 3D User Interfaces Abstracts and Workshops (VRW)},
+  pages={831--832},
+  year={2023},
+  organization={IEEE},
+  pdf={liu2023fluidplaying.pdf}
+}
+
+@inproceedings{song2021silicone,
+  title={Silicone Oil-Water Interaction and Emulsification Visual Simulation for Intraocular Silicone Oil Tamponade},
+  author={Song, Chongming and Xu, Yanrui and Wang, Xiaokun and Wang, Jiamin and Huang, Houbin and Zhu, Zhihong and Ban, Xiaojuan},
+  booktitle={2021 IEEE International Conference on Bioinformatics and Biomedicine (BIBM)},
+  pages={736--741},
+  year={2021},
+  organization={IEEE},
+  pdf={song2021silicone.pdf}
+}
+
+@inproceedings{liu2021simulation,
+  title={Simulation and visualization of solid-liquid phase transition and interactive using particle-based method},
+  author={Liu, Zihao and Xu, Yanrui and Wang, Xiaokun and Ban, Xiaojuan and Zheng, Zhiyu},
+  booktitle={2021 International Conference on Communications, Computing, Cybersecurity, and Informatics (CCCI)},
+  pages={1--5},
+  year={2021},
+  organization={IEEE},
+  pdf={liu2021simulation.pdf}
+}
+
+@inproceedings{liu2021turbulent,
+  title={Turbulent details simulation for SPH fluids via vorticity refinement},
+  author={Liu, Sinuo and Wang, Xiaokun and Ban, Xiaojuan and Xu, Yanrui and Zhou, Jing and Kosinka, Ji{\v{r}}{\'\i} and Telea, Alexandru C},
+  booktitle={Computer Graphics Forum},
+  volume={40},
+  number={1},
+  pages={54--67},
+  year={2021},
+  organization={Wiley Online Library},
+  pdf={liu2021turbulent.pdf}
+}
+
+@article{wang2020robust,
+  title={Robust turbulence simulation for particle-based fluids using the Rankine vortex model},
+  author={Wang, Xiaokun and Liu, Sinuo and Ban, Xiaojuan and Xu, Yanrui and Zhou, Jing and Kosinka, Ji{\v{r}}{\'\i}},
+  journal={The Visual Computer},
+  volume={36},
+  pages={2285--2298},
+  year={2020},
+  publisher={Springer},
+  pdf={wang2020robust.pdf}
+}
+
+
+
+@article{wang2019unified,
+  title={A unified multiple-phase fluids framework using asymmetric surface extraction and the modified density model},
+  author={Wang, Xiaokun and Xu, Yanrui and Ban, Xiaojuan and Liu, Sinuo and Xu, Yuting},
+  journal={Symmetry},
+  volume={11},
+  number={6},
+  pages={745},
+  year={2019},
+  publisher={MDPI},
+  pdf={wang2019unified.pdf}
+}
+
+
+
+@article{wang2019fast,
+  title={Fast and stable surface feature simulation for particle-based fluids},
+  author={Wang, Xiaokun and Xu, Yanrui and Ban, Xiaojuan and Ye, Pengfei},
+  journal={Journal of Beijing Institute of Technology},
+  volume={28},
+  number={1},
+  pages={57--66},
+  year={2019},
+  publisher={JOURNAL OF BEIJING INSTITUTE OF TECHNOLOGY},
+  pdf={wang2019fast.pdf}
+}
+
+
+
+@incollection{wang2019recovering,
+  title={Recovering turbulence details using velocity correction for sph fluids},
+  author={Wang, Xiaokun and Liu, Sinuo and Ban, Xiaojuan and Xu, Yanrui and Zhou, Jing and Wang, Cong},
+  booktitle={SIGGRAPH Asia 2019 Technical Briefs},
+  pages={95--98},
+  year={2019},
+  pdf={wang2019recovering.pdf}
+}
+
+
+
+@incollection{wang2019convergent,
+  title={Convergent turbulence refinement toward irrotational vortex},
+  author={Wang, Xiaokun and Liu, Sinuo and Ban, Xiaojuan and Xu, Yanrui and Zhou, Jing and Wang, Cong},
+  booktitle={ACM SIGGRAPH 2019 Posters},
+  pages={1--2},
+  year={2019},
+  pdf={wang2019convergent.pdf}
+}
+
+
+
+@inproceedings{liu2019viscosity,
+  title={Viscosity-based vorticity correction for turbulent sph fluids},
+  author={Liu, Sinuo and Wang, Xiaokun and Ban, Xiaojuan and Xu, Yanrui and Zhou, Jing and Zhang, Yalan},
+  booktitle={2019 IEEE Conference on Virtual Reality and 3D User Interfaces (VR)},
+  pages={1048--1049},
+  year={2019},
+  organization={IEEE},
+  pdf={liu2019viscosity.pdf}
+}
+
+
+@inproceedings{han2019mipose,
+  title={MIPOSE: a micro-intelligent platform for dynamic human pose recognition},
+  author={Han, Zhishuai and Ban, Xiaojuan and Wang, Xiaokun and Wu, Jianyu},
+  booktitle={Proceedings of Asian CHI Symposium 2019: Emerging HCI Research Collection},
+  pages={60--65},
+  year={2019},
+  pdf={han2019mipose.pdf}
+}
+
+
+
+@article{ban2018adaptively,
+  title={Adaptively stepped SPH for fluid animation based on asynchronous time integration},
+  author={Ban, Xiaojuan and Wang, Xiaokun and He, Liangliang and Zhang, Yalan and Wang, Lipeng},
+  journal={Neural Computing and Applications},
+  volume={29},
+  pages={33--42},
+  year={2018},
+  publisher={Springer},
+  pdf={ban2018adaptively.pdf}
+}
+
+
+@article{wang2018small,
+  title={Small-scale surface details simulation using divergence-free SPH},
+  author={Wang, Xiaokun and Ban, Xiaojuan and Liu, Sinuo and He, Runzi and Xu, Yuting},
+  journal={Journal of Visual Languages \& Computing},
+  volume={48},
+  pages={91--100},
+  year={2018},
+  publisher={Elsevier},
+  pdf={wang2018small.pdf}
+}
+
+
+
+@article{wang2018fluid,
+  title={Fluid-solid boundary handling using pairwise interaction model for non-Newtonian fluid},
+  author={Wang, Xiaokun and Ban, Xiaojuan and He, Runzi and Wu, Di and Liu, Xing and Xu, Yuting},
+  journal={Symmetry},
+  volume={10},
+  number={4},
+  pages={94},
+  year={2018},
+  publisher={MDPI},
+  pdf={wang2018fluid.pdf}
+}
+
+
+
+@article{wang2017surface,
+  title={Surface tension model based on implicit incompressible smoothed particle hydrodynamics for fluid simulation},
+  author={Wang, Xiao-Kun and Ban, Xiao-Juan and Zhang, Ya-Lan and Liu, Si-Nuo and Ye, Peng-Fei},
+  journal={Journal of Computer Science and Technology},
+  volume={32},
+  pages={1186--1197},
+  year={2017},
+  publisher={Springer},
+  pdf={wang2017surface.pdf}
+}
+
+
+
+@article{wang2017rigid,
+  title={Rigid Body Sampling and Individual Time Stepping for Rigid-Fluid Coupling of Fluid Simulation},
+  author={Wang, Xiaokun and Ban, Xiaojuan and Zhang, Yalan and Liu, Xu},
+  journal={Scientific Programming},
+  volume={2017},
+  year={2017},
+  publisher={Hindawi},
+  pdf={wang2017rigid.pdf}
+}
+
+
+@article{zhang2017predictive,
+  title={A predictive-corrective SPH method for shear thinning non-Newtonian fluid},
+  author={Zhang, Y and Ban, X and Xu, Y and Liu, X},
+  journal={Journal of Computer-Aided Design \& Computer Graphics},
+  volume={29},
+  number={5},
+  pages={906--913},
+  year={2017},
+  pdf={zhang2017predictive.pdf}
+}
+
+
+
+
+@inproceedings{wang2017anisotropic,
+  title={Anisotropic surface reconstruction for multiphase fluids},
+  author={Wang, Xiaokun and Ban, Xiaojuan and Zhang, Yalan and Pan, Zhigeng and Liu, Sinuo},
+  booktitle={2017 international conference on cyberworlds (CW)},
+  pages={118--125},
+  year={2017},
+  organization={IEEE},
+  pdf={wang2017anisotropic.pdf}
+}
+
+
+
+
+@article{zhang2017symmetry,
+  title={A symmetry particle method towards implicit non-Newtonian fluids},
+  author={Zhang, Yalan and Ban, Xiaojuan and Wang, Xiaokun and Liu, Xing},
+  journal={Symmetry},
+  volume={9},
+  number={2},
+  pages={26},
+  year={2017},
+  publisher={MDPI},
+  pdf={zhang2017symmetry.pdf}
+}
+
+
+
+@article{wang2016effective,
+  title={Effective reconstructing surfaces algorithm of anisotropic kernels orienting sph fluids},
+  author={Wang, X and Ban, X and Liu, X and Yalan, Z and Wang, L},
+  journal={Journal of Computer-Aided Design and Computer Graphics},
+  volume={28},
+  pages={1497--1505},
+  year={2016},
+  pdf={wang2016effective.pdf}
+}
+
+
+
+
+@inproceedings{li2016individual,
+  title={Individual time-stepping for rigid-fluid coupling of particle based fluids},
+  author={Li, Ruixiang and Wang, XiaoKun},
+  booktitle={2016 International Conference on Cyberworlds (CW)},
+  pages={235--238},
+  year={2016},
+  organization={IEEE},
+  pdf={li2016individual.pdf}
+}
+
+
+
+
+@inproceedings{zhang2016non,
+  title={The Non-Newtonian Fluid Simulation Based on Predictive-Corrective Incompressible SPH},
+  author={Zhang, Yalan and Ban, Xiaojuan and Wang, Xiaokun and Liu, Xing},
+  booktitle={2016 International Conference on Virtual Reality and Visualization (ICVRV)},
+  pages={72--78},
+  year={2016},
+  organization={IEEE},
+  pdf={zhang2016non.pdf}
+}
+
+
+
+
+
+@inproceedings{he2015individual,
+  title={Individual Time Stepping for SPH Fluids.},
+  author={He, Liangliang and Ban, Xiaojuan and Liu, Xu and Wang, Xiaokun},
+  booktitle={Eurographics (Short Papers)},
+  pages={41--44},
+  year={2015},
+  pdf={he2015individual.pdf}
+}
+
+
+
+
+@article{wang2016efficient,
+  title={Efficient extracting surfaces approach employing anisotropic kernels for SPH fluids},
+  author={Wang, XiaoKun and Ban, XiaoJuan and Liu, Xu and Zhang, YaLan and Wang, LiPeng},
+  journal={Journal of Visualization},
+  volume={19},
+  pages={301--317},
+  year={2016},
+  publisher={Springer},
+  pdf={wang2016efficient.pdf}
+}
