--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -40,7 +40,7 @@
   author={Xie, Yuanyan and Guo, Yu and Mi, Zhenqiang and Wang, Xiaokun and Yang, Yang and Obaidat, Mohammad S},
   journal={IEEE Robotics and Automation Letters},
   year={2022},
-  publisher={IEEE}
+  publisher={IEEE},
   pdf={xie2022indoor.pdf}
 }
 
@@ -52,7 +52,7 @@
   volume = {34},
   number = {11},
   pages = {1637-1646},
-  note = {EI, CCF CAD/CG 2021+2022 Conference Best paper award}
+  note = {EI, CCF CAD/CG 2021+2022 Conference Best paper award},
   pdf={xu2022volume.pdf}
 }
 
