--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,7 +32,8 @@
   pages={118--124},
   year={2023},
   publisher={Elsevier},
-  pdf={xu2023anisotropic.pdf}
+  pdf={xu2023anisotropic.pdf},
+  selected={true},
 }
 
 @article{xie2022indoor,
@@ -41,7 +42,8 @@
   journal={IEEE Robotics and Automation Letters},
   year={2022},
   publisher={IEEE},
-  pdf={xie2022indoor.pdf}
+  pdf={xie2022indoor.pdf},
+  selected={true},
 }
 
 @article{xu2022volume,
