--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
   year={2023},
   volume = {e2146},
   note={SCI},
-  pdf={wang2013implicit.pdf},
+  pdf={wang2023implicit.pdf},
   selected={true},
 }
 
@@ -54,8 +54,7 @@
   volume = {34},
   number = {11},
   pages = {1637-1646},
-  note = {EI, CCF CAD/CG 2021+2022 Conference Best paper award},
-  pdf={xu2022volume.pdf}
+  note = {EI, CCF CAD/CG 2021+2022 Conference Best paper award}
 }
 
 @inproceedings{liu2023fluidplaying,
