--- a/_bibliography/mf.bib
+++ b/_bibliography/mf.bib
@@ -70,19 +70,16 @@ author={Wang, Tiancheng and Xu, Yanrui and Li, Ruolan and Wang, Haoping and Xg, 
 booktitle={CASA 2023 AniNex workshop},
 year={2023},
 pages={1--12},
-address={Limassol, Cyprus},
-month={May},
 note={Corresponding author: Xiaokun Wang}
 }
 
 @inproceedings{zhou2023efficient2,
 title={Efficient and High Precision Target-driven Fluid Simulation based on Spatial Geometry Features},
 author={Zhou, Xiangyang and Liu, Sinuo and Zeng, Haokai and Wang, Xiaokun and Ban, Xiaojuan},
-booktitleCASA 2023 AniNex workshop},
+booktitle={CASA 2023 AniNex workshop},
 year={2023},
 pages={1--16},
-address={Limassol, Cyprus},
-month={May}
+
 }
 
 @inproceedings{wang2022volume,
@@ -91,18 +88,15 @@ author={Wang, Xiaokun and Wang, Tiancheng and Wang, Jiamin and Xu, Yanrui and Ba
 booktitle={CASA 2022 AniNex workshop},
 year={2022},
 pages={1--10},
-address={Nanjing, China},
-month={July}
+
 }
 
 @inproceedings{xu2022spatial,
 title={Spatial Adaptivity Boundaryinement for SPH Fluid Simulation},
 author={Xu, Yanui and Song, Chongming and Wang, Xiaokun and Ban, Xiaojuan and Wang, Jiamin and Zhang, Yalan and Chang, Jian},
-booktitleC 2022 AniNex workshop},
+booktitle={C 2022 AniNex workshop},
 year={2022},
 pages={1--10},
-address={Nanjing, China},
-month={July},
 note={Best paper award}
 }
 
@@ -113,8 +107,7 @@ author={Xu, Yanrui and Xu, Yuanmu and Dou, Yin and Ban, Xiaojuan and Wang, Xiaok
 booktitle={7.CASA 2022 AniNex workshop},
 year={2022},
 pages={1--10},
-address={Nanjing, China},
-month={July}
+
 }
 
 @inproceedings{xu2022volume2,
@@ -123,6 +116,5 @@ author={Xu, Yanrui and Wang, Xiaokun and Ban,juan and Wang, Jiamin and Song, Cho
 booktitle={CCF CAD/CG 2021+2022 Conference},
 year={2022},
 pages={1--10},
-address={Dalian, China},
-month={August}
+
 }
