--- a/_bibliography/mf.bib
+++ b/_bibliography/mf.bib
@@ -1,3 +1,6 @@
+--- <div class="publications">
+--- {% bibliography -f mf  %}
+--- </div> 
 @article{wang2023physics,
 title={Physics-based fluid simulation: Survey, research trends, and challenges},
 author={Wang, Xiaokun and Xu, Yanrui and Liu, Sinuo and Ren, Bo and Kosina, Jiri and Tele, Alexandru C and Wang, Jiamin and Song, Chongmin and Chang, Jian and Li, Chenfeng and Ban, Xiaojuan and Zhang, Jianjun},
