add from researchgate

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,35 @@
 ---
 ---
 --- todo abbr={CAVW},
+@article{wang2023simulating,
+  title={Simulating hyperelastic materials with anisotropic stiffness models in a particle-based framework},
+  author={Wang, Tiancheng and Xu, Yanrui and Li, Ruolan and Wang, Haoping and Xiong, Yuege and Wang, Xiaokun},
+  journal={Computers \& Graphics},
+  volume={116},
+  pages={437--447},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{han2023handdgcl,
+  title={HandDGCL: Two-hand 3D reconstruction based disturbing graph contrastive learning},
+  author={Han, Bing and Yao, Chao and Wang, Xiaokun and Chang, Jian and Ban, Xiaojuan},
+  journal={Computer Animation and Virtual Worlds},
+  pages={e2186},
+  year={2023},
+  pdf={han2023handdgcl.pdf},
+  publisher={Wiley Online Library}
+}
+
+@article{zhouefficient,
+  title={Efficient and high precision target-driven fluid simulation based on spatial geometry features},
+  author={Zhou, Xiangyang and Liu, Sinuo and Zeng, Haokai and Wang, Xiaokun and Ban, Xiaojuan},
+  journal={Computer Animation and Virtual Worlds},
+  pages={e2202},
+  publisher={Wiley Online Library}
+}
+
+
 @article{wang2023implicit,
   
   title={Implicit smoothed particle hydrodynamics model for simulating incompressible fluid-elastic coupling},
@@ -150,6 +179,14 @@
 }
 
 
+@inproceedings{xu2019turbulence,
+  title={Turbulence enhancement for sph fluids visualization},
+  author={Xu, Yanrui and Ban, Xiaojuan and Peng, Yan and Wang, Xiaokun and Liu, Sinuo and Zhou, Jing},
+  booktitle={Cooperative Design, Visualization, and Engineering: 16th International Conference, CDVE 2019, Mallorca, Spain, October 6--9, 2019, Proceedings 16},
+  pages={254--260},
+  year={2019},
+  organization={Springer}
+}
 
 @incollection{wang2019convergent,
   title={Convergent turbulence refinement toward irrotational vortex},
@@ -195,6 +232,13 @@
   pdf={ban2018adaptively.pdf}
 }
 
+@article{han2018robust,
+  title={Robust and customized methods for real-time hand gesture recognition under object-occlusion},
+  author={Han, Zhishuai and Ban, Xiaojuan and Wang, Xiaokun and others},
+  journal={arXiv preprint arXiv:1809.05911},
+  year={2018},
+  pdf={han2018robust.pdf}
+}
 
 @article{wang2018small,
   title={Small-scale surface details simulation using divergence-free SPH},
@@ -221,6 +265,17 @@
   pdf={wang2018fluid.pdf}
 }
 
+@article{liu2018symmetric,
+  title={A symmetric particle-based simulation scheme towards large scale diffuse fluids},
+  author={Liu, Sinuo and Ban, Xiaojuan and Wang, Ben and Wang, Xiaokun},
+  journal={Symmetry},
+  volume={10},
+  number={4},
+  pages={86},
+  year={2018},
+  pdf={liu2018symmetric.pdf},
+  publisher={MDPI}
+}
 
 
 @article{wang2017surface,
@@ -272,7 +327,34 @@
 }
 
 
+@inproceedings{liu2017surface,
+  title={Surface Tension Fluid Simulation with Adaptiving Time Steps},
+  author={Liu, Xu and Ye, Pengfei and Ban, Xiaojuan and Wang, Xiaokun},
+  booktitle={Cooperative Design, Visualization, and Engineering: 14th International Conference, CDVE 2017, Mallorca, Spain, September 17-20, 2017, Proceedings 14},
+  pages={220--227},
+  year={2017},
+  organization={Springer}
+}
 
+@inproceedings{ban2017improved,
+  title={An Improved Anisotropic Kernels Surface Reconstruction Method for Multiphase Fluid},
+  author={Ban, Xiaojuan and Wang, Lipeng and Wang, Xiaokun and Zhang, Yalan},
+  booktitle={Cooperative Design, Visualization, and Engineering: 14th International Conference, CDVE 2017, Mallorca, Spain, September 17-20, 2017, Proceedings 14},
+  pages={270--277},
+  year={2017},
+  organization={Springer}
+}
+
+@article{article,
+author = {Wang, Xiaokun and Ban, X. and Guan, J.},
+year = {2014},
+month = {11},
+pages = {9743-9750},
+title = {Rigid body sampling for rigid-fluid coupling in SPH},
+volume = {10},
+journal = {Journal of Computational Information Systems},
+doi = {10.12733/jcis13114}
+}
 
 @article{zhang2017symmetry,
   title={A symmetry particle method towards implicit non-Newtonian fluids},
@@ -286,7 +368,25 @@
   pdf={zhang2017symmetry.pdf}
 }
 
+@inproceedings{wang2016rigid,
+  title={Rigid Body Sampling and Boundary Handling for Rigid-Fluid Coupling of Particle Based Fluids},
+  author={Wang, Xiaokun and Ban, XiaoJuan and Zhang, YaLan and Liu, Xu},
+  booktitle={Cooperative Design, Visualization, and Engineering: 13th International Conference, CDVE 2016, Sydney, NSW, Australia, October 24--27, 2016, Proceedings 13},
+  pages={210--218},
+  year={2016},
+  pdf={wang2016rigid.pdf},
+  organization={Springer}
+}
 
+
+@inproceedings{zhang2016density,
+  title={A Density-Correction Method for Particle-Based Non-Newtonian Fluid},
+  author={Zhang, Yalan and Ban, Xiaojuan and Wang, Xiaokun and Liu, Xing},
+  booktitle={Cooperative Design, Visualization, and Engineering: 13th International Conference, CDVE 2016, Sydney, NSW, Australia, October 24--27, 2016, Proceedings 13},
+  pages={219--226},
+  year={2016},
+  organization={Springer}
+}
 
 @article{wang2016effective,
   title={Effective reconstructing surfaces algorithm of anisotropic kernels orienting sph fluids},
@@ -312,6 +412,15 @@
 }
 
 
+@inproceedings{zhang2016adaptiving,
+  title={Adaptiving time steps for sph cloth-fluid coupling},
+  author={Zhang, Yalan and Ban, Xiaojuan and Liu, Xu and Wang, Xiaokun},
+  booktitle={2016 International Conference on Cyberworlds (CW)},
+  pages={143--146},
+  year={2016},
+  pdf={zhang2016adaptiving.pdf},
+  organization={IEEE}
+}
 
 
 @inproceedings{zhang2016non,
@@ -349,4 +458,15 @@
   year={2016},
   publisher={Springer},
   pdf={wang2016efficient.pdf}
+}
+
+@article{liu2014shape,
+  title={Shape reconstruction from cross-sections based on free-form deformations},
+  author={Liu, Xu and Ban, Xiaojuan and Huang, Xiaolei and Liu, Xi and Wang, Xiaokun},
+  journal={Journal of computational Information Systems},
+  volume={10},
+  number={22},
+  pages={9733--9742},
+  year={2014},
+  publisher={Binary Information Press}
 }
