--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -333,6 +333,7 @@
   booktitle={Cooperative Design, Visualization, and Engineering: 14th International Conference, CDVE 2017, Mallorca, Spain, September 17-20, 2017, Proceedings 14},
   pages={220--227},
   year={2017},
+  pdf={liu2017surface.pdf},
   organization={Springer}
 }
 
@@ -342,6 +343,7 @@
   booktitle={Cooperative Design, Visualization, and Engineering: 14th International Conference, CDVE 2017, Mallorca, Spain, September 17-20, 2017, Proceedings 14},
   pages={270--277},
   year={2017},
+  pdf={ban2017improved.pdf}
   organization={Springer}
 }
 
