--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,15 @@
 ---
 ---
---- todo abbr={CAVW},
+--- zxc abbr={CAVW},
+
+@inproceedings{xu2023implicitly,
+  title={An Implicitly Stable Mixture Model for Dynamic Multi-fluid Simulations},
+  author={Xu, Yanrui and Wang, Xiaokun and Wang, Jiamin and Song, Chongming and Wang, Tiancheng and Zhang, Yalan and Chang, Jian and Zhang, Jian Jun and Kosinka, Jiri and Telea, Alexandru and others},
+  booktitle={SIGGRAPH Asia 2023 Conference Papers},
+  pages={1--11},
+  year={2023}
+}
+
 @article{wang2023simulating,
   title={Simulating hyperelastic materials with anisotropic stiffness models in a particle-based framework},
   author={Wang, Tiancheng and Xu, Yanrui and Li, Ruolan and Wang, Haoping and Xiong, Yuege and Wang, Xiaokun},
