--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,12 +2,19 @@
 ---
 --- zxc abbr={CAVW},
 
+@article{
+
+ title={Monte Carlo Vortical Smoothed Particle Hydrodynamics for Simulating Turbulent Flows}
+ author={}
+ 
+}
 @inproceedings{xu2023implicitly,
   title={An Implicitly Stable Mixture Model for Dynamic Multi-fluid Simulations},
   author={Xu, Yanrui and Wang, Xiaokun and Wang, Jiamin and Song, Chongming and Wang, Tiancheng and Zhang, Yalan and Chang, Jian and Zhang, Jian Jun and Kosinka, Jiri and Telea, Alexandru and others},
   booktitle={SIGGRAPH Asia 2023 Conference Papers},
   pages={1--11},
-  year={2023}
+  year={2023},
+  pdf={xu2023implicitly.pdf},
 }
 
 @article{wang2023simulating,
