--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,13 +1,13 @@
 ---
 ---
 --- zxc abbr={CAVW},
-
-@article{
-
- title={Monte Carlo Vortical Smoothed Particle Hydrodynamics for Simulating Turbulent Flows}
- author={}
- 
+@article{wang2023physics
+ title={Physics-based fluid simulation in computer graphics: Survey, research trends, and challenges},
+  author={ Wang, Xiaokun and Xu, Yanrui and Liu, Sinuo and Ren, Bo and Kosinka, Jiri and Telea, Alexandru and Wang, Jiamin and Song, Chongming and Chang, Jian and Li,Chenfeng and Zhang, Jianjun and Ban, Xiaojuan},
+  booktitle={Computational Visual Media},
+  pdf={wang2023physics.pdf}
 }
+
 @inproceedings{xu2023implicitly,
   title={An Implicitly Stable Mixture Model for Dynamic Multi-fluid Simulations},
   author={Xu, Yanrui and Wang, Xiaokun and Wang, Jiamin and Song, Chongming and Wang, Tiancheng and Zhang, Yalan and Chang, Jian and Zhang, Jian Jun and Kosinka, Jiri and Telea, Alexandru and others},
