--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,9 +2,10 @@
 ---
 --- zxc abbr={CAVW},
 @article{wang2023physics
- title={Physics-based fluid simulation in computer graphics: Survey, research trends, and challenges},
+  title={Physics-based fluid simulation in computer graphics: Survey, research trends, and challenges},
   author={ Wang, Xiaokun and Xu, Yanrui and Liu, Sinuo and Ren, Bo and Kosinka, Jiri and Telea, Alexandru and Wang, Jiamin and Song, Chongming and Chang, Jian and Li,Chenfeng and Zhang, Jianjun and Ban, Xiaojuan},
   booktitle={Computational Visual Media},
+  year={2023},
   pdf={wang2023physics.pdf}
 }
 
