add paper monte

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,21 @@
 ---
 ---
 --- zxc abbr={CAVW},
+@article{ye2024monte,
+title={Monte Carlo Vortical Smoothed Particle Hydrodynamics for Simulating Turbulent Flows},
+author={Ye, Xingyu and Wang, Xiaokun and Xu, Yanrui and Kosinka, Jiri and Telea, Alexandru and You,Lihua and Zhang, Jian Jun and Chang, Jian },
+booktilte={Computer Graphics Forum},
+year={2024},
+  pdf={ye2024monte.pdf}
+}
+
+@article{wang2023physics,
+  title={Physics-based fluid simulation in computer graphics: Survey, research trends, and challenges},
+  author={ Wang, Xiaokun and Xu, Yanrui and Liu, Sinuo and Ren, Bo and Kosinka, Jiri and Telea, Alexandru and Wang, Jiamin and Song, Chongming and Chang, Jian and Li,Chenfeng and Zhang, Jianjun and Ban, Xiaojuan},
+  booktitle={Computational Visual Media},
+  year={2023},
+  pdf={wang2023physics.pdf}
+}
 
 
 @inproceedings{xu2023implicitly,
