--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,32 @@
 ---
 ---
---- zxc abbr={CAVW}, 
+---
+
+@article{wang2024peridynamic,
+  title={Peridynamic-Based Modeling of Elastoplasticity and Fracture Dynamics},
+  author={Wang, Haoping and Wang, Xiaokun and Xu, Yanrui and Zhang, Yalan and Yao, Chao and Guo, Yu and Ban, Xiaojuan},
+  journal={Computer Animation and Virtual Worlds},
+  year={2024}
+}
+
+@article{xiong2024dual,
+  title={Dual-mechanism surface tension model for SPH-based simulation},
+  author={Xiong, Yuege and Wang, Xiaokun and Xu, Yanrui and Zhang, Yalan and Chang, Jian and Zhang, Jianjun and Ban, Xiaojuan},
+  journal={The Visual Computer},
+  pages={1--12},
+  year={2024},
+  publisher={Springer},
+  pdf={xiong2024dual.pdf}
+}
+
+@inproceedings{sun2024who,
+  title={Who looks like me: Semantic Routed Image Harmonization},
+  author={Sun, Jinsheng and Yao, Chao and Wang, Xiaokun and and Guo, Yu and Zhang, Yalan and Ban, Xiaojuan},
+  booktitle={International Joint Conference on Artificial Intelligence(IJCAI)},
+  year={2024},
+  pdf={sun2024who.pdf}
+}
+
 
 @inproceedings{ye2024monte,
   title={Monte Carlo Vortical Smoothed Particle Hydrodynamics for Simulating Turbulent Flows},
