--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,8 @@
   title={Peridynamic-Based Modeling of Elastoplasticity and Fracture Dynamics},
   author={Wang, Haoping and Wang, Xiaokun and Xu, Yanrui and Zhang, Yalan and Yao, Chao and Guo, Yu and Ban, Xiaojuan},
   journal={Computer Animation and Virtual Worlds},
-  year={2024}
+  year={2024},
+  pdf={wang2024peridynamic_c.pdf}
 }
 
 @article{xiong2024dual,
