--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,14 @@
 ---
 ---
 
+@inproceedings{shenlongSCA
+title={Multiphase Viscoelastic Non-Newtonian Fluid Simulation},
+author={Zhang, Yalan and Shen, Long and Xu, Yanrui and Wang, Xiaokun and Yao, Chao and Kosinka, Jiri and Telea, Alexandru and Frey, Steffen and Ban, Xiaojuan},
+booktitle={Proceedings of the 2024 ACM SIGGRAPH/Eurographics symposium on Computer animation},
+year={2024},
+pdf={shenlongSCA.pdf}
+}
+
 @article{wang2024peridynamic,
   title={Peridynamic-Based Modeling of Elastoplasticity and Fracture Dynamics},
   author={Wang, Haoping and Wang, Xiaokun and Xu, Yanrui and Zhang, Yalan and Yao, Chao and Guo, Yu and Ban, Xiaojuan},
