--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
 @inproceedings{shenlongSCA,
   title={Multiphase Viscoelastic Non-Newtonian Fluid Simulation},
   author={Zhang, Yalan and Shen, Long and Xu, Yanrui and Wang, Xiaokun and Yao, Chao and Kosinka, Jiri and Telea, Alexandru and Frey, Steffen and Ban, Xiaojuan},
-  booktitle={Proceedings of the 2024 ACM SIGGRAPH/Eurographics Symposium on Computer Animation},
+  booktitle={Proceedingsx of the 2024 ACM SIGGRAPH/Eurographics Symposium on Computer Animation},
   year={2024},
   pdf={shenlongSCA.pdf}
 }
